--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ fork = "0.1"
 futures-util = "0.3.24"
 log = "0.4"
 merge = "0.1.0"
-notify = "5.0.0-pre.3"
+notify = "5.0.0"
 rnix = "0.10.2"
 serde = { version = "1.0.145", features = ["derive"] }
 serde_json = "1.0.85"
