--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ tokio = { version = "1.21.2", features = [
 ] }
 toml = "0.5"
 tracing = "0.1.36"
+tracing-error = "0.2.0"
 tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
 whoami = "1.2.3"
 yn = "0.1"
