--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,10 @@
-# SPDX-FileCopyrightText: 2020 Serokell <https://serokell.io/>
-#
-# SPDX-License-Identifier: MPL-2.0
+[workspace]
+members = ["crates/*"]
 
 [package]
-name = "deploy-rs"
+name = "nxy"
 version = "0.1.0"
-authors = ["notgne2 <gen2@gen2.space>", "Serokell <hi@serokell.io>"]
+authors = ["Alexander Sieg <alex@xanderio.de>"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -13,17 +12,9 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.0.2", features = ["wrap_help", "derive"] }
 color-eyre = "0.6.2"
-flexi_logger = { version = "0.23.3", features = ["use_chrono_for_offset"] }
-fork = "0.1"
-futures-util = "0.3.24"
-log = "0.4"
-merge = "0.1.0"
-notify = "5.0.0"
-rnix = "0.10.2"
 serde = { version = "1.0.145", features = ["derive"] }
 serde_json = "1.0.85"
-signal-hook = "0.3"
-thiserror = "1.0"
+merge = "0.1.0"
 tokio = { version = "1.21.2", features = [
 	"process",
 	"macros",
@@ -32,16 +23,11 @@ tokio = { version = "1.21.2", features = [
 	"fs",
 	"time",
 ] }
-toml = "0.5"
 tracing = "0.1.36"
 tracing-error = "0.2.0"
 tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
-whoami = "1.2.3"
-yn = "0.1"
 
-[lib]
-name = "deploy"
-path = "src/lib.rs"
+deploy = { path = "crates/deploy" }
 
 [profile.release]
 lto = true
