--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,18 +16,25 @@ serde = { version = "1.0.145", features = ["derive"] }
 serde_json = "1.0.85"
 merge = "0.1.0"
 tokio = { version = "1.21.2", features = [
-	"process",
-	"macros",
-	"sync",
-	"rt-multi-thread",
-	"fs",
-	"time",
+        "process",
+        "macros",
+        "sync",
+        "rt-multi-thread",
+        "fs",
+        "time",
 ] }
 tracing = "0.1.36"
 tracing-error = "0.2.0"
 tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
 
 deploy = { path = "crates/deploy" }
+sqlx = { version = "0.6.2", features = [
+        "runtime-tokio-rustls",
+        "postgres",
+        "offline",
+        "macros",
+        "migrate",
+] }
 
 [profile.release]
 lto = true
