--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ tracing-error = "0.2.0"
 tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
 
 deploy = { path = "crates/deploy" }
+rpc = { path = "crates/rpc" }
 sqlx = { version = "0.6.2", features = [
         "runtime-tokio-rustls",
         "postgres",
@@ -43,7 +44,6 @@ axum = { version = "0.5.16", features = ["ws", "headers"] }
 hyper = { version = "0.14.20", features = ["full"] }
 tower = "0.4.13"
 tower-http = { version = "0.3.4", features = ["trace"] }
-tokio-tungstenite = "0.17.2"
 
 [profile.release]
 lto = true
