--- a/crates/agent/Cargo.toml
+++ b/crates/agent/Cargo.toml
@@ -16,3 +16,6 @@ rpc = { path = "../rpc" }
 tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "fs"] }
 tracing-error = "0.2.0"
 serde_json = "1.0.87"
+uuid = { version = "1.2.1", features = ["v4", "serde"] }
+serde = { version = "1.0.146", features = ["derive"] }
+once_cell = "1.15.0"
