--- a/crates/rpc/Cargo.toml
+++ b/crates/rpc/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 color-eyre = "0.6.2"
 serde = { version = "1.0.145", features = ["derive"] }
 serde_json = "1.0.87"
+uuid = { version = "1.2.1", features = ["serde"] }
