--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,21 +29,14 @@ tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
 
 deploy = { path = "crates/deploy" }
 rpc = { path = "crates/rpc" }
-sqlx = { version = "0.6.2", features = [
-        "runtime-tokio-rustls",
-        "postgres",
-        "offline",
-        "macros",
-        "migrate",
-        "json",
-        "chrono",
-] }
+sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "offline", "macros", "migrate", "json", "chrono", "uuid"] }
 chrono = { version = "0.4.22", features = ["serde"] }
 futures-util = "0.3.24"
 axum = { version = "0.5.16", features = ["ws", "headers"] }
 hyper = { version = "0.14.20", features = ["full"] }
 tower = "0.4.13"
 tower-http = { version = "0.3.4", features = ["trace"] }
+uuid = "1.2.1"
 
 [profile.release]
 lto = true
