--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,14 +15,7 @@ color-eyre = "0.6.2"
 serde = { version = "1.0.145", features = ["derive"] }
 serde_json = "1.0.85"
 merge = "0.1.0"
-tokio = { version = "1.21.2", features = [
-        "process",
-        "macros",
-        "sync",
-        "rt-multi-thread",
-        "fs",
-        "time",
-] }
+tokio = { version = "1.21.2", features = ["process", "macros", "sync", "rt-multi-thread", "fs", "time", "tracing"] }
 tracing = "0.1.36"
 tracing-error = "0.2.0"
 tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
@@ -37,6 +30,7 @@ hyper = { version = "0.14.20", features = ["full"] }
 tower = "0.4.13"
 tower-http = { version = "0.3.4", features = ["trace"] }
 uuid = "1.2.1"
+console-subscriber = "0.1.8"
 
 [profile.release]
 lto = true
