--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,14 +15,30 @@ color-eyre = "0.6.2"
 serde = { version = "1.0.145", features = ["derive"] }
 serde_json = "1.0.85"
 merge = "0.1.0"
-tokio = { version = "1.21.2", features = ["process", "macros", "sync", "rt-multi-thread", "fs", "time", "tracing"] }
+tokio = { version = "1.21.2", features = [
+        "process",
+        "macros",
+        "sync",
+        "rt-multi-thread",
+        "fs",
+        "time",
+        "tracing",
+] }
 tracing = "0.1.36"
 tracing-error = "0.2.0"
 tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
 
-deploy = { path = "crates/deploy" }
 rpc = { path = "crates/rpc" }
-sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "offline", "macros", "migrate", "json", "chrono", "uuid"] }
+sqlx = { version = "0.6.2", features = [
+        "runtime-tokio-rustls",
+        "postgres",
+        "offline",
+        "macros",
+        "migrate",
+        "json",
+        "chrono",
+        "uuid",
+] }
 chrono = { version = "0.4.22", features = ["serde"] }
 futures-util = "0.3.24"
 axum = { version = "0.5.16", features = ["ws", "headers"] }
