--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.0.2", features = ["wrap_help", "derive"] }
 color-eyre = "0.6.2"
 serde = { version = "1.0.145", features = ["derive"] }
 serde_json = "1.0.85"
-merge = "0.1.0"
 tokio = { version = "1.21.2", features = [
         "process",
         "macros",
@@ -47,6 +45,8 @@ tower = "0.4.13"
 tower-http = { version = "0.3.4", features = ["trace"] }
 uuid = "1.2.1"
 console-subscriber = "0.1.8"
+thiserror = "1.0.37"
+serde_with = "2.0.1"
 
 [profile.release]
 lto = true
