--- a/crates/agent/Cargo.toml
+++ b/crates/agent/Cargo.toml
@@ -13,7 +13,7 @@ tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 
 rpc = { path = "../rpc" }
-tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "fs"] }
+tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "fs", "time"] }
 tracing-error = "0.2.0"
 serde_json = "1.0.87"
 uuid = { version = "1.2.1", features = ["v4", "serde"] }
