--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,10 @@ name = "nxy"
 [[bin]]
 name = "nxyd"
 
+[features]
+default = []
+tokio-console = ["console-subscriber"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
@@ -50,9 +54,10 @@ hyper = { version = "0.14.20", features = ["full"] }
 tower = "0.4.13"
 tower-http = { version = "0.3.4", features = ["trace"] }
 uuid = "1.2.1"
-console-subscriber = "0.1.8"
 thiserror = "1.0.37"
 serde_with = "2.0.1"
+
+console-subscriber = { version = "0.1.8", optional = true }
 
 [profile.release]
 lto = true
