--- a/crates/rpc/Cargo.toml
+++ b/crates/rpc/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-color-eyre = "0.6.2"
+thiserror = "1.0"
 serde = { version = "1.0.145", features = ["derive"] }
 serde_json = "1.0.87"
 uuid = { version = "1.2.1", features = ["serde"] }
