--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,7 @@ sqlx = { version = "0.6.2", features = [
 ] }
 chrono = { version = "0.4.23", features = ["serde"] }
 futures-util = "0.3.25"
-axum = { version = "=0.6.0-rc.5", features = ["ws", "headers", "macros"] }
+axum = { version = "0.6.0", features = ["ws", "headers", "macros"] }
 hyper = { version = "0.14.23", features = [] }
 tower = "0.4.13"
 tower-http = { version = "0.3.4", features = ["trace"] }
