--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ tracing = "0.1.37"
 tracing-error = "0.2.0"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 
-rpc = { path = "nxy-rpc" }
+nxy-rpc = { path = "nxy-rpc" }
 sqlx = { version = "0.6.2", features = [
         "runtime-tokio-rustls",
         "postgres",
