--- a/nxy-agent/Cargo.toml
+++ b/nxy-agent/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "agent"
+name = "nxy-agent"
 version = "0.1.0"
 edition = "2021"
 
@@ -12,7 +12,7 @@ tokio-tungstenite = "0.18.0"
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 
-rpc = { path = "../nxy-rpc" }
+nxy-rpc = { path = "../nxy-rpc" }
 tokio = { version = "1.22.0", features = ["rt-multi-thread", "macros", "fs", "time"] }
 tracing-error = "0.2.0"
 serde_json = "1.0.89"
