--- a/nxy-cli/Cargo.toml
+++ b/nxy-cli/Cargo.toml
@@ -6,3 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+color-eyre = "0.6.2"
+ureq = { version = "2.5.0", features = ["json"] }
+serde = { version = "1.0.148", features = ["derive"] }
+serde_json = "1.0.89"
+uuid = { version = "1.2.2", features = ["serde"] }
+tabled = { version = "0.10.0", features = ["color"] }
+clap = { version = "4.0.29", features = ["derive"] }
