--- a/nxy-agent/Cargo.toml
+++ b/nxy-agent/Cargo.toml
@@ -12,7 +12,7 @@ tokio-tungstenite = "0.18.0"
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 
-nxy-rpc = { path = "../nxy-rpc" }
+nxy-common = { path = "../nxy-common" }
 tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros", "fs", "time", "process"] }
 tracing-error = "0.2.0"
 serde_json = "1.0.89"
