--- a/nxy-agent/Cargo.toml
+++ b/nxy-agent/Cargo.toml
@@ -7,13 +7,11 @@ edition = "2021"
 
 [dependencies]
 color-eyre = "0.6.2"
-futures-util = "0.3.25"
-tokio-tungstenite = "0.18.0"
+tungstenite = "0.18.0"
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 
 nxy-common = { path = "../nxy-common" }
-tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros", "fs", "time", "process"] }
 tracing-error = "0.2.0"
 serde_json = "1.0.91"
 uuid = { version = "1.2.2", features = ["v4", "serde"] }
